Updated build gradle